SLCORE-1314 Investigate storage exceptions on synchronization